test/expect/cmd.input-missing.stderr.txt
^error: no such file or directory: '.*/test/input/does-not-exist.c'
error: no input files$
